Fixed ecom basket added state on iOS

--- a/css/ecommerce.less
+++ b/css/ecommerce.less
@@ -795,6 +795,9 @@ a.btn.ecom-product-go-to-checkout-btn {
 			background-color: green;
 			border: 3px solid green;
             padding: 0 35px;
+            .text:before {
+                line-height: 1;
+            }
 		}
 	}
 
